--- a/YellowStore/Controls/ProductControl.xaml
+++ b/YellowStore/Controls/ProductControl.xaml
@@ -26,8 +26,8 @@
             <TextBlock Style="{StaticResource name}">Apple iPhone 12 Pro</TextBlock>
             <TextBlock Style="{StaticResource name}">512GB (Graphite) Dual SIM</TextBlock>
             <TextBlock Style="{StaticResource price}">42 199 грн.</TextBlock>
-            <Button Width="50" Height="18" Margin="10,0" HorizontalAlignment="Left" FontSize="8" FontWeight="DemiBold" HorizontalContentAlignment="Left" Background="Yellow"> Купить</Button>
-            <TextBlock Text="{Binding Path=color}" TextAlignment="Center"></TextBlock>
+            <Button BorderThickness="0" Width="50" Height="18" Margin="10,0" HorizontalAlignment="Left" FontSize="8" FontWeight="DemiBold" HorizontalContentAlignment="Left" Background="Yellow"> Купить</Button>
+            <TextBlock Text="{Binding Path=color}" TextAlignment="Center" Background="DarkSlateBlue" Foreground="Yellow" Margin="15"></TextBlock>
         </StackPanel>
     </Border>
 </UserControl>
